Сделал DML и условитя выбора DML или DDL

--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SQL_queries.h" />
     <ClInclude Include="TCP_Socket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
