Сервер вроде закончил

--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -134,6 +134,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SQL_queries.cpp" />
     <ClCompile Include="TCP_Socket.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
